# myjsoncpptest

./: README.md  myjsoncpp_0.1_amd64.snap  myjsoncpp_0.1_armhf.snap  snapcraft.yaml
jsonprog/: CMakeLists.txt  main.cpp
jsonprog/lib/pkgconfig/: jsoncpp.pc
